# red-plasma

./: .gitignore  CMakeLists.txt  README.md
RedPlasmaEditor/: CMakeLists.txt
RedPlasmaEditor/src/: main.cpp
RedPlasmaEngine/: CMakeLists.txt
RedPlasmaEngine/include/: Engine.h  IGraphicsDevice.h  IWindowSurface.h  VulkanGraphicsDevice.h  VulkanWindowSurface.h  WaylandSurface.h
RedPlasmaEngine/src/: Engine.cpp  VulkanGraphicsDevice.cpp  VulkanWindowSurface.cpp
assets/shaders/vulkan/: triangle.vert
docs/notes/: note.txt
editor/: CMakeLists.txt
editor/src/: main.cpp
engine/: CMakeLists.txt
engine/include/red_plasma/engine/: engine_api,h  engine_api.h
engine/samples/triangle/: CMakeLists.txt
engine/src/: engine.cpp
shared/: CMakeLists.txt
